--- a/src/styles.css
+++ b/src/styles.css
@@ -114,6 +114,15 @@ header h1 {
 }
 
 /*********************************************************/
+/* Content */
+/*********************************************************/
+
+.content {
+  display: flex;
+  height: 100%;
+}
+
+/*********************************************************/
 /* Projects Nav*/
 /*********************************************************/
 
@@ -145,13 +154,33 @@ nav button[aria-selected="true"] {
 }
 
 /*********************************************************/
-/* Content */
+/* Main */
 /*********************************************************/
 
-.content-wrap {
+main {
+  flex: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+#main-header {
+  font-size: 2rem;;
+}
+
+#tasklist {
+  flex: 1;
+  width: 100%;
+  
+}
+
+.card {
   display: flex;
   width: 100%;
-  height: 100%;
+  padding: 1rem;
 }
 
 /*********************************************************/
@@ -170,14 +199,6 @@ button[id*="cta"] {
   font-size: 1.25rem;
   font-weight: 500;
   gap: 0.625rem;
-}
-
-/*********************************************************/
-/* main */
-/*********************************************************/
-
-main {
-
 }
 
 /*********************************************************/
