--- a/src/styles.css
+++ b/src/styles.css
@@ -139,7 +139,7 @@ nav button {
   align-items: center;
   width: 100%;
   background: none;
-  padding: 1rem 2rem 1rem 2rem;
+  padding: 0.5rem;
   border: none;
   font-size: 1.25rem;
   font-weight: 500;
