--- a/src/styles.css
+++ b/src/styles.css
@@ -145,6 +145,50 @@ nav button {
   font-weight: 500;
   gap: 0.625rem;
   border-radius: 0.5rem;
+  justify-content: flex-start;
+
+  /* Add transition for smooth background change */
+  transition: background-color 0.3s ease;
+}
+
+nav button:hover {
+  background: rgba(0, 0, 0, 0.025);
+}
+
+nav button > .actions {
+  margin-left: auto;
+  display: flex;
+  gap: 0.3rem;
+  
+  /* Hide actions by default */
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+nav button:hover > .actions {
+  /* Show actions on button hover */
+  opacity: 1;
+  visibility: visible;
+}
+
+nav button > .actions i:hover {
+  color: var(--accent-color); /* Change icon color to accent on hover */
+}
+
+nav button > i:first-child {
+  flex-shrink: 0; /* Prevent the icon from shrinking */
+}
+
+nav button > .actions {
+  margin-left: auto; /* Push the actions div to the right */
+  display: flex;
+  gap: 0.3rem; /* Add some space between action icons */
+}
+
+nav button > .actions i {
+  font-size: 1.25rem;
+  color:rgba(0, 0, 0, 0.3)
 }
 
 nav button[aria-selected="true"] {
