--- a/src/styles.css
+++ b/src/styles.css
@@ -317,16 +317,24 @@ legend {
   color: rgba(0, 0, 0, 0.7);
 }
 
-legend button {
+#close-btn {
   position: absolute;
-  top: -10px;
-  right: -10px;
+  top: 20px;
+  right: 20px;
   cursor: pointer;
   border: none;
   outline: none;
   background: none;
   font-size: 1.25rem;
   font-weight: 600;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0; /* Remove padding */
+  line-height: 1; /* Ensure text is centered vertically */
+  z-index: 1000; /* Ensure the button is on top */
 }
 
 .form-item {
