disable Add Task when filtered by Today or 7 days

--- a/src/styles.css
+++ b/src/styles.css
@@ -265,6 +265,11 @@ button[id*="cta"] {
   gap: 0.625rem;
 }
 
+#create-cta.disabled {
+  pointer-events: none;
+  opacity: 0.3;
+}
+
 /*********************************************************/
 /* Dialog Form */
 /*********************************************************/
