--- a/src/styles.css
+++ b/src/styles.css
@@ -336,13 +336,19 @@ button[id*="cta"] {
 .title-done span {
   display: inline-block;
   font-size: 2rem;
+  transform: scale(1);
+  transition: transform 200ms ease-in-out;
+}
+
+.title-done:hover span {
+  transform: scale(1.2);
 }
 
 /* Hide the default checkbox - still tabbable */
-/* [type='checkbox'] {
+[type='checkbox'] {
   position: absolute;
   opacity: 0;
-} */
+}
 
 
 
