--- a/src/styles.css
+++ b/src/styles.css
@@ -336,14 +336,41 @@ button[id*="cta"] {
 .title-done span {
   display: inline-block;
   font-size: 2rem;
+  color: rgba(0, 0, 0, 0.5);
   transform: scale(1);
   transition: transform 200ms ease-in-out;
 }
 
-.title-done:hover span {
+.title-done:hover span,
+/* label that is next to focused checkbox */
+[type='checkbox']:focus + label span { 
   transform: scale(1.2);
+  color: black;
+}
+/* Task card styling when checkbox is checked */
+[type='checkbox']:checked + label span { 
+  transform: scale(1);
+  color: black;
 }
 
+.title-done input.done:checked + label {
+  position: relative;
+  opacity: 0.33;
+}
+/* pseudo element to only style label's text content */
+.title-done input.done:checked + label::after {
+  content: attr(data-text);
+  text-decoration: line-through;
+  position: absolute;
+  left: 20px;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+}
 /* Hide the default checkbox - still tabbable */
 [type='checkbox'] {
   position: absolute;
