sonata analysis commit

--- a/src/styles.css
+++ b/src/styles.css
@@ -377,6 +377,10 @@ button[id*="cta"] {
   opacity: 0;
 }
 
+.due-date {
+  white-space: nowrap;
+}
+
 
 
 /*********************************************************/
