--- a/src/styles.css
+++ b/src/styles.css
@@ -284,6 +284,7 @@ button[id*="cta"] {
   display: flex;
   align-items: center;
   width: 100%;
+  gap: 1rem;
   padding: 1rem;
   border-radius: 0.5rem;
   border-left: 5px solid var(--accent-color);
@@ -369,13 +370,12 @@ label:has(input.done:checked)::after {
   content: attr(data-text);
   text-decoration: line-through;
   position: absolute;
-  left: 20px;
+  left: 40px;
   top: 0;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
   pointer-events: none;
 }
 /* Hide the default checkbox - still tabbable */
@@ -395,6 +395,8 @@ label:has(input.done:checked)::after {
 /*********************************************************/
 
 dialog {
+  display: flex;
+  flex-direction: column;
   margin: auto;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
   border-radius: 1rem;
@@ -563,13 +565,11 @@ dialog h1 {
   text-align: center;
   font-size: larger;
   font-weight: 600;
-  padding-bottom: 2rem;
   margin: 0 auto;
   color: rgba(0, 0, 0, 0.7);
 }
 
 dialog p {
-  padding-bottom: 2rem;
   font-size: large;
   margin: 0 auto;
   color: rgba(0, 0, 0, 0.7);
@@ -582,4 +582,43 @@ dialog p span {
 
 dialog #delete-cta {
   background: firebrick;
+}
+
+#info-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+#info-header[priority="low"] {
+  background-color: var(--low-priority-hover);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-top: 6px solid var(--low-priority);
+}
+
+#info-header[priority="medium"] {
+  background-color: var(--medium-priority-hover);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-top: 6px solid var(--medium-priority);
+}
+
+#info-header[priority="high"] {
+  background-color: var(--high-priority-hover);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-top: 6px solid var(--high-priority);
+}
+
+#task-info-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1.5rem;
 }
