minor css and data tweaks

--- a/src/styles.css
+++ b/src/styles.css
@@ -295,6 +295,7 @@ main {
   align-items: center;
   padding: 1rem;
   gap: 1rem;
+  /* background: linear-gradient(to bottom, var(--bckg), var(--bckg2)); */
 }
 
 #main-header {
