delete task while 7-days or today filter bug fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -498,7 +498,7 @@ label:has(input.done:checked)::after {
 }
 
 #empty-project h1 {
-  font-size: xx-large;
+  font-size: x-large;
   font-weight: 700;
 }
 
